# wiki-spaces

./: .gitignore  AGENTS.md  CONVENTIONS.md  LICENSE  README.md  index.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
bridges/: index.md
bridges/cursor/: wiki-spaces.mdc
bridges/windsurf/: wiki-spaces.md
references/: EXAMPLES.md  HARNESS_INTEGRATION.md  MOUNT.md  SETUP.md  index.md
scripts/: doctor.py  index.md  init_wiki.py  install.py  update.py  vendor_kepano.py
skills/: index.md
skills/wiki-search/: SKILL.md
skills/wiki-tend/: SKILL.md
skills/wiki-update/: SKILL.md
src/wiki_spaces/: __init__.py  __main__.py  _common.py  _links.py  _md.py  cli.py  doctor.py  init_wiki.py  install.py  space.py  update.py  vendor_kepano.py
tests/: test_common.py  test_doctor.py  test_init_wiki.py  test_install.py  test_links.py  test_md.py  test_space.py
