[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wiki-spaces"
version = "0.1.0"
description = "Minimal nestable wiki — a folder + index.md, for any use case (notes, research, recipes, writing, team docs). Spec, conventions catalog, and reference skills."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "André Ferreira", email = "anfreire.dev@gmail.com" }]
keywords = ["wiki", "markdown", "obsidian", "knowledge-base", "notes", "personal-wiki", "ai-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = []

[dependency-groups]
test = ["pytest>=8.0"]

[project.scripts]
wiki-spaces = "wiki_spaces.cli:main"

[project.urls]
Homepage = "https://github.com/anfreire/wiki-spaces"
Repository = "https://github.com/anfreire/wiki-spaces"
Issues = "https://github.com/anfreire/wiki-spaces/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/wiki_spaces"]

[tool.hatch.build.targets.wheel.force-include]
"AGENTS.md" = "wiki_spaces/data/AGENTS.md"
"CONVENTIONS.md" = "wiki_spaces/data/CONVENTIONS.md"
"bridges" = "wiki_spaces/data/bridges"
"references" = "wiki_spaces/data/references"
"skills" = "wiki_spaces/data/skills"
"vendor" = "wiki_spaces/data/vendor"

[tool.hatch.build.targets.sdist]
include = [
    "src/wiki_spaces",
    "scripts",
    "bridges",
    "references",
    "skills",
    "vendor",
    "AGENTS.md",
    "CONVENTIONS.md",
    "README.md",
    "LICENSE",
    "index.md",
]
